3822B1FI1/7_gemm_cublas/sedova_olga/log.txt
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu(61): error: argument of type "const float *" is incompatible with parameter of type "int"
       do { cublasStatus_t status = cublasSgemm_v2(handle, CUBLAS_OP_T, CUBLAS_OP_N, n, n, &alpha, d_c, n, &beta, nullptr, n, d_ct, n); if (status != CUBLAS_STATUS_SUCCESS) { std::cerr << "cuBLAS error in " << "/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu" << ":" << 61 << ", code: " << status << std::endl; throw std::runtime_error("cuBLAS call failed"); } } while (0)
                                                                                           ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu(61): error: argument of type "int" is incompatible with parameter of type "const float *"
       do { cublasStatus_t status = cublasSgemm_v2(handle, CUBLAS_OP_T, CUBLAS_OP_N, n, n, &alpha, d_c, n, &beta, nullptr, n, d_ct, n); if (status != CUBLAS_STATUS_SUCCESS) { std::cerr << "cuBLAS error in " << "/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu" << ":" << 61 << ", code: " << status << std::endl; throw std::runtime_error("cuBLAS call failed"); } } while (0)
                                                                                                        ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu(61): error: argument of type "const float *" is incompatible with parameter of type "int"
       do { cublasStatus_t status = cublasSgemm_v2(handle, CUBLAS_OP_T, CUBLAS_OP_N, n, n, &alpha, d_c, n, &beta, nullptr, n, d_ct, n); if (status != CUBLAS_STATUS_SUCCESS) { std::cerr << "cuBLAS error in " << "/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu" << ":" << 61 << ", code: " << status << std::endl; throw std::runtime_error("cuBLAS call failed"); } } while (0)
                                                                                                           ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu(61): error: argument of type "int" is incompatible with parameter of type "float *"
       do { cublasStatus_t status = cublasSgemm_v2(handle, CUBLAS_OP_T, CUBLAS_OP_N, n, n, &alpha, d_c, n, &beta, nullptr, n, d_ct, n); if (status != CUBLAS_STATUS_SUCCESS) { std::cerr << "cuBLAS error in " << "/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu" << ":" << 61 << ", code: " << status << std::endl; throw std::runtime_error("cuBLAS call failed"); } } while (0)
                                                                                                                                    ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu(61): error: too few arguments in function call
       do { cublasStatus_t status = cublasSgemm_v2(handle, CUBLAS_OP_T, CUBLAS_OP_N, n, n, &alpha, d_c, n, &beta, nullptr, n, d_ct, n); if (status != CUBLAS_STATUS_SUCCESS) { std::cerr << "cuBLAS error in " << "/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu" << ":" << 61 << ", code: " << status << std::endl; throw std::runtime_error("cuBLAS call failed"); } } while (0)
                                                                                                                                     ^

5 errors detected in the compilation of "/home/crazyproger/sandbox/cuda-2025/3822B1FI1/7_gemm_cublas/sedova_olga/gemm_cublas.cu".
